--- a/views/signup-professional.hbs
+++ b/views/signup-professional.hbs
@@ -1,7 +1,4 @@
-<h1>Cadastre-se no portal de serviços!</h1>
-
-<p>É profissional? Então cadastre-se 
-<a href="/signup-professional">aqui</a>!</p>
+<h1>Cadastre-se no portal de serviços como PROFISSIONAL!</h1>
 
 <form action="/signup" method="post" enctype="multipart/form-data">
     <div>
@@ -40,3 +37,4 @@
 
     <button type="submit">Efetuar cadastro</button>
 </form>
+
