--- a/views/newProject.hbs
+++ b/views/newProject.hbs
@@ -1,8 +1,8 @@
 <div><br>
-    <form action="/services/new" method="post">
+    <form action="/services/new" method="post" enctype="multipart/form-data">
         <input type="text" name="serviceTitle" placeholder="Insira um título para o seu projeto.">
         <input type="text" name="serviceDescription" placeholder="Descreva o tipo de serviço.">
-        <input type="text" name="imageProject" placeholder="Link das fotos do projeto.">
+        <input type="file" name="imageProject" placeholder="Link das fotos do projeto.">
         <button type="submit">Cadastar projeto!</button>
     </form>
 </div>
