--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,7 +16,7 @@
             <a href="/services/new">Cadastrar projeto</a>
         {{/if}}
         <a href="/logout">Sair</a>
-        <span>Bem vindo {{user.name}}</span>
+        <span>Olá {{user.name}}!</span>
 {{else}}
         <a href="/login">Entrar</a>
         <a href="/signup">Cadastre-se</a>
