--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -36,3 +36,22 @@ a {
 span {
     color: white;
 }
+
+.container {
+    width: 100%;
+    margin: auto;
+    position: relative;
+    display: flex;
+    }
+
+.container img {
+    width: 100%;
+    height: 500px;
+}
+
+.container h1 {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+}
