--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,1 +1,5 @@
-<h1>Bem vindo ao portal de serviços!!!</h1>
+
+<div class="container">
+    <img src="images/header.png" alt="Background">
+    <h1>Bem vindo ao portal de serviços!!!</h1>
+</div>
