--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,3 +3,31 @@
     <img src="images/header.png" alt="Background">
     <h1>Bem vindo ao portal de serviços!!!</h1>
 </div>
+
+<div class="passo">
+    <img src="images/1briefing.jpg" alt="Background">
+    <h2>1.</h2>
+    <h5>Descreve sua necessidade para o profissional!</h5>
+</div>
+
+<div class="passo">
+    <img src="images/2negociando.jpg" alt="Background">
+    <h2>2.</h2>
+    <h5>Negocie com o profissional!</h5>
+</div>
+
+<div class="passo">
+    <img src="images/3fechado.jpg" alt="Background">
+    <h2>3.</h2>
+    <h5>Feche o negócio!</h5>
+</div>
+
+<footer>
+    <p>Descrição do endereço</p>
+    <p>Descrição do endereço</p>
+    <p>Descrição do endereço</p>
+    <p>Descrição do endereço</p>
+    <p>Descrição do endereço</p>
+    <p>Descrição do endereço</p>
+
+</footer>
