--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -6,11 +6,20 @@
 }
 
 nav {
-    height: 70px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 50px;
     background-color: #3c2d76;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+}
+
+.logo {
+    height: 100%;
+    width: auto;
 }
 
 nav > a {
@@ -40,8 +49,6 @@ span {
 .container {
     width: 100%;
     margin: auto;
-    position: relative;
-    display: flex;
     }
 
 .container img {
@@ -50,8 +57,9 @@ span {
 }
 
 .container h1 {
-    position: fixed;
+    position: absolute;
+    color: #f25982;
+    border: 2px solid orange;
     top: 50%;
     left: 50%;
-    text-align: center;
 }
