--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,7 +1,7 @@
 
 <div class="container">
     <img src="images/header.png" alt="Background">
-    <h1>Bem vindo ao portal de serviços!!!</h1>
+    <h1>Bem vindo ao portal de serviços!</h1>
 </div>
 
 <div class="passo">
