--- a/views/newProject.hbs
+++ b/views/newProject.hbs
@@ -1,7 +1,9 @@
-<div><br>
+<div class="formLogin"><br>
+<h4>Cadestre quantos projetos qusier e monstre para todo mundo o que vocês faz!</h4>
     <form action="/services/new" method="post" enctype="multipart/form-data">
         <input type="text" name="serviceTitle" placeholder="Insira um título para o seu projeto.">
-        <input type="text" name="serviceDescription" placeholder="Descreva o tipo de serviço.">
+        <input type="text" name="serviceDescription" placeholder="Descreva o seu projeto.">
+        <h6>Insira fotos do seu projeto para valorizar ainda mais o seu trabalho.</h6>
         <input type="file" name="imageProject" placeholder="Link das fotos do projeto.">
         <button type="submit">Cadastar projeto!</button>
     </form>
