--- a/views/signup-professional.hbs
+++ b/views/signup-professional.hbs
@@ -1,4 +1,6 @@
-<h1>Cadastre-se no portal de serviços como PROFISSIONAL!</h1>
+<div class="formLogin">
+
+<h4>Cadastre-se e mostre seus projetos!</h4>
 
 <form action="/signup-professional" method="post" enctype="multipart/form-data">
     <div>
@@ -6,6 +8,7 @@
     </div>
 
     <div>
+        <h6>Insira sua foto de perfil</h6>
         <input type="file" name="userImage" placeholder="Link da sua foto">
     </div>
 
@@ -36,6 +39,7 @@
         <input type="password" name="userPassword" placeholder="Crie sua senha de acesso">
     </div>
 
-    <button type="submit">Efetuar cadastro</button>
+    <button type="submit">Cadastrar</button>
 </form>
 
+</div>
