--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,4 +1,6 @@
-<h1>Cadastre-se no portal de serviços!</h1>
+<div class="formLogin">
+
+<h4>Cadastre-se para ter acesso a plataforma com todos os serviços disponíveis.</h4><br>
 
 <p>É profissional? Então cadastre-se 
 <a href="/signup-professional">aqui</a>!</p>
@@ -34,5 +36,7 @@
             {{/if}}
     </div>
 
-    <button type="submit">Efetuar cadastro</button>
+    <button type="submit">Cadastrar</button>
 </form>
+
+</div>
