--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,18 +1,24 @@
-<h1>Faça o login.</h1>
-
+<div class="formLogin">
+<h1 class="login">Login</h1>
+<section>
 <form action="/login" method="post">
-        <input type="email" name="userEmail" placeholder="Informe seu email" required>
-            {{#if userEmailError}}
-                <span class="warning">{{userEmailError}}</span>
-            {{/if}}
+    <div>
+        <label for="">Digite seu email</label><br>
+            <input type="email" name="userEmail" placeholder="Informe seu email" required>
+                {{#if userEmailError}}
+                    <span class="warning">{{userEmailError}}</span>
+                {{/if}}
     </div>
 
     <div>
+        <label for="">Digite sua senha</label><br>
         <input type="password" name="userPassword" placeholder="Digite sua senha de acesso">
             {{#if userPasswordError}}
                 <span class="warning">{{userPasswordError}}</span>
             {{/if}}
     </div>
 
-    <button type="submit">Acessar a plataforma</button>
+    <button type="submit">Login</button>
 </form>
+</section>
+</div>
