--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,7 +19,7 @@
                 {{#if isProfessional}}
                     <li><a href="/services/new">Cadastrar projeto</a></li>
                 {{/if}}
-                    <span>Olá {{user.name}}!</span>
+                    <span>&lt; Olá {{user.name}}! &gt;</span>
                     <li><a href="/logout">Sair</a></li>
                 {{else}}
                     <li><a href="/signup">Cadastre-se</a></li>
