--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -1,22 +1,22 @@
 <div class="project">
-  {{#if project}}
     <div class="executor">
+  {{#if project}}
       <img class="executorImg" src="{{project.[0].executor.image}}" alt="{{this.executor.name}} photo">
-      <div class="executorText">    
         <h1>{{project.[0].executor.name}}</h1>
         <h3>{{project.[0].executor.phone}}</h3>
         <h3>{{project.[0].executor.email}}</h3>
-      </div>
-      </div>
+    </div>
+      <div class="projectContainer">
     {{#each project}}<br>
-      <div class="projectFlex">
-        <h4>Projeto:</h4>
-        <h5>{{this.title}}</h5>
-        <h4>Descrição do projeto:</h4>
-        <h5>{{this.description}}</h5>
+        <div class="projectFlex">
         <img src="{{this.image}}" alt="{{this.name}} photo">
-      </div>
+          <h4>Projeto:</h4>
+          <h5>{{this.title}}</h5>
+          <h4>Descrição do projeto:</h4>
+          <h5>{{this.description}}</h5>
+        </div>
     {{/each}}
+      </div>
 </div>
     {{else}}
     <h1>Este profisional ainda não tem projetos</h1>
